# coding_puzzles

./: CMakeLists.txt  README.md  main.cpp
barraiser_question/: CMakeLists.txt  main.cpp
coding_puzzles/: CMakeLists.txt  Notes.txt  base_header.h  main.cpp
coding_puzzles/cracking/: cracking_008_002_comparison_top_down_vs_bottom_up.h  cracking_008_004.h  cracking_008_005.h  cracking_008_007.h  cracking_008_011.h  cracking_008_012.h  cracking_010_001.h  cracking_010_002.h  cracking_010_003.h
coding_puzzles/daily/: daily_002.h  daily_004.h  daily_007.h  daily_009.h  daily_010.h  daily_012_comparison_top_down_vs_bottom_up.h  daily_013.h  daily_014.h  daily_030.h  daily_035.h  daily_041.h  daily_047.h  daily_049.h  daily_050.h  daily_052.h  daily_062.h  daily_065.h  daily_069.h  daily_070.h  daily_073.h  daily_090.h  daily_099.h  daily_100.h  daily_119.h  daily_123.h  daily_126.h
coding_puzzles/euler/: euler_01.h  euler_02.h  euler_03.h  euler_04.h  euler_05.h  euler_08.h  euler_10.h
coding_puzzles/other/: ball_game.h  experiments_cpp_inheritance.h  experiments_cpp_stl.h  experiments_sorting.h  hacker_rank_test.h  interview_question_barraiser.h  template.h  util_tests.h
coding_puzzles/other/ball_game/: Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Types.h  ball_game.h  impossible_001_10left.txt  impossible_002_2left.txt  place001_1left.txt  place011_5left.txt  place043_10left.txt  place044_10left.txt  place045_10left.txt  place046_10left.txt  place047_10left.txt  place048_10left.txt  place049_10left.txt  place050_10left.txt  place051_10left.txt  place052_10left.txt  place053_10left.txt  place054_10left.txt  place055_10left.txt  place056_10left.txt
coding_puzzles/utils/: binarytree.h  doublylinkedlist.h  graph.h  linkedlist.h  queue.h  stack.h
common/: binarytree.cpp  binarytree.h  doublylinkedlist.cpp  doublylinkedlist.h  doublylinkedlistderived.cpp  doublylinkedlistderived.h  graph.h  linkedlist.h  stack.h
cpp_template_experiments/: CMakeLists.txt  main.cpp
cracking/: cracking_001_001.h  cracking_001_002.h  cracking_001_004.h  cracking_010_001.h
cracking_10_1/: CMakeLists.txt  main.cpp
cracking_10_2/: CMakeLists.txt  main.cpp
cracking_10_3/: CMakeLists.txt  main.cpp
cracking_1_1/: CMakeLists.txt  main.cpp
cracking_1_2/: CMakeLists.txt  main.cpp
cracking_1_4/: CMakeLists.txt  main.cpp
cracking_8_11/: CMakeLists.txt  main.cpp
cracking_8_12/: CMakeLists.txt  main.cpp
cracking_8_2_comparison_top_down_vs_bottom_up/: CMakeLists.txt  main.cpp
cracking_8_4/: CMakeLists.txt  main.cpp
cracking_8_5/: CMakeLists.txt  main.cpp
cracking_8_7/: CMakeLists.txt  main.cpp
daily/: daily_001.h  daily_012_comparison_top_down_vs_bottom_up.h  daily_013.h  daily_035.h  daily_041.h  daily_047.h  daily_050.h  daily_052.h  daily_062.h  daily_073.h  daily_090.h  daily_099.h  daily_118.h  daily_119.h
daily_01/: CMakeLists.txt  main.cpp
daily_02/: CMakeLists.txt  main.cpp
daily_04/: CMakeLists.txt  main.cpp
daily_07/: CMakeLists.txt  main.cpp
daily_09/: CMakeLists.txt  main.cpp
daily_10/: CMakeLists.txt  main.cpp
daily_100/: CMakeLists.txt  main.cpp
daily_118/: CMakeLists.txt  main.cpp
daily_119/: CMakeLists.txt  main.cpp
daily_12_comparison_top_down_vs_bottom_up/: CMakeLists.txt  main.cpp
daily_13/: CMakeLists.txt  main.cpp
interview_question_roman_numbers/: CMakeLists.txt  main.cpp
(+51 files in other folders)
